# internal/handlers/http/request/addresses.go
@@ -16,6 +16,17 @@ type UpdateAddressesRequest struct {
 	PostalCode string  `json:"postalCode" validate:"required,max=20" example:"75003"`
 	Country    string  `json:"country" validate:"required,max=100" example:"France"`
 }
+type SearchAddressesRequest struct {
+	PageNumber int    `query:"pageNumber"`
+	PageSize   int    `query:"pageSize"`
+	City       string `query:"city"`
+	Province   string `query:"province"`
+	PostalCode string `query:"postalCode"`
+	Country    string `query:"country"`
+	AccountsID string `query:"accountsID"`
+	OrderBy    string `query:"orderBy"`
+	OrderType  string `query:"orderType" validate:"omitempty,oneof=desc asc"`
+}
 
 type DeleteAddressesRequest struct {
 	ID string `param:"id" validate:"uuid4,required"`
